SobreMi y Header + CV

--- a/myWeb/src/app/header/header.component.html
+++ b/myWeb/src/app/header/header.component.html
@@ -1,20 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" routerLink="/SobreMi">[JDC]</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Sobre mi <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Fotografía</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Ilustración</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="collapse navbar-collapse navbarA" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active">SobreMi <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link disabled" >Desarrollo Web</a>
+        <a class="nav-item nav-link disabled" >Diseño Gráfico</a>
+        <a class="nav-item nav-link disabled" tabindex="-1" aria-disabled="true">Más</a>
+      </div>
+    </div>
+  </nav>
