--- a/myWeb/src/app/header/header.component.html
+++ b/myWeb/src/app/header/header.component.html
@@ -1,12 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/SobreMi">[JDC]</a>
-
-    <div class="collapse navbar-collapse navbarA" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active">SobreMi <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link disabled" >Desarrollo Web</a>
-        <a class="nav-item nav-link disabled" >Diseño Gráfico</a>
-        <a class="nav-item nav-link disabled" tabindex="-1" aria-disabled="true">Más</a>
-      </div>
+  <a class="navbar-brand main" routerLink="/SobreMi">[JDC]</a>
+  <div class="collapse navbarA">
+    <div class="navbar-nav navbarB">
+      <a class="nav-item nav-link active"> <i class="fas fa-user icons"></i><span class="text">Sobre Mi</span></a>
+      <a class="nav-item nav-link disabled"> <i class="fas fa-code icons"></i><span class="text">Desarrollo
+          Web</span></a>
+      <a class="nav-item nav-link disabled"> <i class="fas fa-drafting-compass icons"></i><span class="text">Diseño
+          Gráfico</span></a>
+      <a class="nav-item nav-link disabled" tabindex="-1" aria-disabled="true">
+        <i class="fas fa-angle-double-right icons"></i><span class="text">Más</span>
+      </a>
     </div>
-  </nav>
+  </div>
+</nav>
