--- a/myWeb/src/app/sobre-mi/sobre-mi.component.html
+++ b/myWeb/src/app/sobre-mi/sobre-mi.component.html
@@ -1,28 +1,32 @@
 <div class="container">
   <div class="row">
-    <h1>Jorge Durán Corbalán</h1>
-    <br><br><br><br>
-  </div>
-  <div class="row">
     <div class="col-6 col-md-4">
-      <img src="../../assets/Foto_Cv.png" alt="Jorge Durán Corbalán" width="75%">
+      <br><br><br><br>
+      <img class="image" src="../../assets/Foto_Cv.png" alt="Jorge Durán Corbalán">
     </div>
     <div class="col-12 col-md-8">
-      <div>
-        <h4>Presentación</h4>
-        <p>
-          Mi nombre es Jorge Durán Corbalán.
-          Soy diseñador gráfico y desarrollador web, formado en la Universidad de Murcia y en el IES Carlos III de
-          Cartagena.
-          La intención de este sitio web es tener una recopilación de aquellos trabajos que voy haciendo y que no me
-          importaría mostrar
-          a quien caiga por aquí.
-          <br><br>
-          Además, la idea de esta web es poder usarla como campo de pruebas para practicar aquellas cosas que poco a
-          poco voy curioseando
-          y aprendiendo. Por lo que si ves algo raro, ya sabes por qué es.
-        </p>
-        <p>Dejo mi CV por aquí para más info: <a href="./../../assets/CV_IT_2018_Noviembre.png">CV_Jorgedcor.png</a></p>
+      <div class="row">
+        <h1>Jorge Durán Corbalán</h1>
+        <br><br><br><br>
+      </div>
+      <div class="row">
+        <div>
+          <h4>Presentación</h4>
+          <p>
+            Mi nombre es Jorge Durán Corbalán.
+            Soy diseñador gráfico y desarrollador web, formado en la Universidad de Murcia y en el IES Carlos III de
+            Cartagena.
+            La intención de este sitio web es tener una recopilación de aquellos trabajos que voy haciendo y que no me
+            importaría mostrar
+            a quien caiga por aquí.
+            <br><br>
+            Además, la idea de esta web es poder usarla como campo de pruebas para practicar aquellas cosas que poco a
+            poco voy curioseando
+            y aprendiendo. Por lo que si ves algo raro, ya sabes por qué es.
+          </p>
+          <p>Dejo mi CV por aquí para más info: <a href="./../../assets/CV_IT_2018_Noviembre.png">CV_Jorgedcor.png</a>
+          </p>
+        </div>
       </div>
       <br>
     </div>
