--- a/myWeb/src/app/sobre-mi/sobre-mi.component.html
+++ b/myWeb/src/app/sobre-mi/sobre-mi.component.html
@@ -1,13 +1,18 @@
 <div class="container">
-  <div class="row">
+  <div class="row main">
+    <br><br>
     <div class="col-6 col-md-4">
-      <br><br><br><br>
-      <img class="image" src="../../assets/Foto_Cv.png" alt="Jorge Durán Corbalán">
+      <div class="col-12">
+        <img class="image" src="../../assets/Foto_Cv.png" alt="Jorge Durán Corbalán">
+      </div>
+      <div class="col-12">
+
+      </div>
     </div>
-    <div class="col-12 col-md-8">
+    <div class="col-12 col-md-8 sector">
       <div class="row">
         <h1>Jorge Durán Corbalán</h1>
-        <br><br><br><br>
+        <br>
       </div>
       <div class="row">
         <div>
