--- a/myWeb/src/app/header/header.component.css
+++ b/myWeb/src/app/header/header.component.css
@@ -11,6 +11,11 @@
     flex-direction: row;
 }
 
+nav {
+    background-color: white;
+    box-shadow: 1px 1px 5px #666;
+}
+
 @media only screen and (max-width: 2000px) and (min-width: 900px) {
     .icons {
         display: none;
