--- a/myWeb/src/app/header/header.component.html
+++ b/myWeb/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light ">
   <a class="navbar-brand main" routerLink="/SobreMi">[JDC]</a>
   <div class="collapse navbarA">
     <div class="navbar-nav navbarB">
