Sobre-mi Updated

--- a/myWeb/src/app/sobre-mi/sobre-mi.component.html
+++ b/myWeb/src/app/sobre-mi/sobre-mi.component.html
@@ -18,7 +18,7 @@
         <div>
           <h4>Presentación</h4>
           <p>
-            Mi nombre es Jorge Durán Corbalán.
+            Mi nombre es <strong>Jorge Durán Corbalán</strong>.
             Soy diseñador gráfico y desarrollador web, formado en la Universidad de Murcia y en el IES Carlos III de
             Cartagena.
             La intención de este sitio web es tener una recopilación de aquellos trabajos que voy haciendo y que no me
@@ -29,7 +29,104 @@
             poco voy curioseando
             y aprendiendo. Por lo que si ves algo raro, ya sabes por qué es.
           </p>
-          <p>Dejo mi CV por aquí para más info: <a href="./../../assets/CV_IT_2018_Noviembre.png">CV_Jorgedcor.png</a>
+          <p>Como huelo que me voy a explayar, dejo aquí mi <b>Currículum Vitae</b> : 
+            <a href="./../../assets/CV_IT_2018_Noviembre.png">CV_Jorgedcor.png</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <h4>Experiencia</h4>
+          <p>Actualmente, y desde diciembre de 2018, trabajo como desarrollador web en <b>Capgemini Murcia</b>. El
+            puesto de trabajo
+            lo conseguí después de realizar unas prácticas de 400h en dicha empresa, donde pude aplicar los
+            conocimientos
+            adquiridos durante el Ciclo Superior de Desarollo de Aplicaciones Web.
+            <br><br>
+            Del mismo modo, he realizados otros trabajos no relacionados con el mundo de la informática, como el de
+            <b>captador de
+              socios para ONGs</b> (Sí. ¿Los pesados que te paran por la calle? Yo era uno de ellos). Creo que quien
+            trabaja en algo de
+            ese tipo está preparado para cualquier cosa, la verdad. O eso quiero pensar.
+            <br><br>
+            Por último, como experiencia semi-laboral, he desarrollado prácticas como <b>profesor de Dibujo Técnico y
+              Educación Plástica,
+              visual y audiovisual</b> en un colegio público, de 140h de duración. Que también curte.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <h4>Formación</h4>
+          <p>Siguiendo un orden cronológico inverso, se puede decir que soy <b>Técnico Superior de Desarrollo de
+              Aplicaciones Web</b>,
+            formación que culminé en diciembre de 2018, tras finalizar las prácticas laborales. Mientras desarrollaba el
+            ciclo,
+            superior cursé el <b>Máster Interuniversitario en Comunicación Móvil y Contenidos Digitales</b>, por la
+            Universidad de Murcia
+            y la Universidad Politécnica de Cartagena. Dicho máster lo terminé en 2017. Como no sabía si hacer un ciclo
+            superior o
+            un máster, decidí matricularme en ambos y probar, pudiendo, finalmente, completar los dos. Fue un año duro,
+            pero valió
+            la pena.
+            <br><br>
+            Anteriormente, cursé el <b>Máster en Formación del Profesorado</b>, por la Universidad de Murcia, durante el
+            curso 2014/2015
+            donde realicé prácticas como profesor, como he puesto en el otro apartado.
+            <br><br>
+            Del mismo modo, soy graduado en <b>Bellas Artes</b>, por la Universidad de Murcia, titulación que cursé
+            entre 2010 y 2014.
+            <br><br>
+            En cuanto a los idiomas, tengo un nivel <b>B2 de Inglés</b>, acreditado por la Escuela Oficial de Idiomas y
+            por otras instituciones.
+            Además, estoy en proceso de aprendizaje de <b>Francés</b>. Nunca es tarde.
+
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <h4>Pero ¿Qué sé hacer?</h4>
+          <h5>Desarrollo Web</h5>
+          <p>En cuanto a lenguajes de programación, lo que creo manejar de mejor manera a día de hoy es <b>Angular 7</b>  (por
+            poner la última versión, pero la 2 también vale. AngujarJS no lo he tocado), <b>Java, Spring</b> (principalmente
+            Spring
+            Boot y Spring MVC). Eso lleva implícito en manejo de lenguajes como <b>Typescript, javascript, HTML y CSS</b>,
+            entre
+            otros, por lo que también los meto en el saco.
+            <br><br>
+            También he trabajado con <b>Php, Ajax, Ionic, NodeJs</b> entre otros. Así como con bases de datos relacionales y no
+            relacionales,
+            como <b>MySQL, PostgreSQL o MongoDB</b>. Y lenguaje <b>SQL y PL-SQL</b>.
+            <br><br>
+            En cuanto a entornos, suelo usar <b>Visual Studio Code y Eclipse</b>, aunque también he trabajado con Netbeans,
+            Sublime, etc.
+            Así como con sistemas de contro de versiones, como <b>Git</b>.
+          </p>
+          <h5>Diseño Gráfico</h5>
+          <p>He desarrollado trabajos de cartelería, realización de logotipos, vinilos, realización de vídeos y fotografía, tanto 
+            en exteriores como en estudio. 
+            <br><br>
+            En cuanto a los programas que manejo, podría decirse que con la rama Adobe, como puede ser <b>Photoshop, Illustrator, 
+                Premiere, After Effect, Lightroom o InDesign</b>. También he tenido experiencia con Blender, 
+          </p>
+          <h5>Otros</h5>
+          <p>Aquí voy a poner otras cosas en las que he trabajado, a nivel de formación (de la Universidad o por mi cuenta):
+            Me gusta el tema de análisis de datos, por lo que suele leer cosas relacionadas con ello. Además, tengo conocimientos 
+            básicos de <b>minería de datos y análisis de métricas</b>.
+            <br><br>
+            También me gustan las <b>RRSS</b>, más investigarlas y estar presente, mucho menos usarlas y publicar cosas. Por ello, me he 
+            formado en el tema a través de lecturas, de conocer el uso de la publicidad en las principales RRSS, de la creación de 
+            contenido, etc.
+            <br><br>
+            Además, como me gusta el tema de las Webs, he investigado y leído bastante sobre <b>SEO, SEM, ASO y analítica web</b>. Por lo que 
+            tengo cierta base en dichos temas.
+            <br><br>
+            Otras cosas que no he puesto en ningún lado y en las que también sé hacer algo: <b>Línux, Gestores de contenido</b> (Wordpress, 
+            Prestashop...), servicios web, y un largo etcétera. En general, suelo ser bastante curioso y trato de leer acerca de todo.
           </p>
         </div>
       </div>
