--- a/myWeb/src/app/sobre-mi/sobre-mi.component.css
+++ b/myWeb/src/app/sobre-mi/sobre-mi.component.css
@@ -18,6 +18,7 @@ p {
 
 @media only screen and (min-width: 600px) {
     .image {
-        width: 75%;
+        margin-top: 1em;
+        width: 90%;
     }
 }
